Prevent the character grop dropdown from getting too long.

--- a/packages/ckeditor5-theme-lark/theme/ckeditor5-special-characters/specialcharacters.css
+++ b/packages/ckeditor5-theme-lark/theme/ckeditor5-special-characters/specialcharacters.css
@@ -22,4 +22,11 @@
 		text-overflow: ellipsis;
 		overflow: hidden;
 	}
+
+	& > .ck-dropdown .ck-dropdown__panel {
+		/* There could be dozens of categories available. Use scroll to prevent a 10e6px dropdown. */
+		max-height: 250px;
+		overflow-y: auto;
+		overflow-x: hidden;
+	}
 }
